# smart-city-sousse-2030-V2

./: .env  .env.example  .gitignore  Dockerfile  LICENSE  README.md  docker-compose.yml  pyproject.toml  requirements.txt
ai/: action_advisor.py  ambiguity_handler.py  client.py  context_builder.py  report_generator.py
ai/prompts/: ambiguity_templates.py  report_templates.py
compiler/: ast_nodes.py  codegen.py  errors.py  lexer.py  parser.py  pipeline.py  semantic_analyzer.py  tokens.py
compiler/ambiguity/: detector.py  resolver.py
config/: settings.py
dashboard/: app.py  state.py
dashboard/components/: ast_viewer.py  chart_builder.py  fsm_widget.py  results_table.py
dashboard/pages/: 01_requetes.py  02_automates.py  03_rapports_ia.py  04_donnees.py
database/: connection.py  schema.sql
database/seed/: geo.py  seed_all.py  seed_capteurs.py  seed_citoyens.py  seed_interventions.py  seed_mesures.py  seed_vehicules.py
docs/: LATEST_WINDOWS_WORK.md
fsm/: base.py  intervention_fsm.py  persistence.py  scheduler.py  sensor_fsm.py  side_effects.py  vehicle_fsm.py  visualizer.py
tests/: conftest.py
tests/scenarios/: scenario_01_air_quality_report.py  scenario_02_sensor_fault_lifecycle.py  scenario_03_intervention_full_workflow.py  scenario_04_nl_count_query.py  scenario_05_nl_avg_with_where.py  scenario_06_nl_groupby_orderby.py  scenario_07_ambiguous_query.py  scenario_08_vehicle_route_fsm.py  scenario_09_timed_alert_trigger.py  scenario_10_full_pipeline_integration.py
tests/unit/: test_action_advisor.py  test_ai_client.py  test_chart_builder.py  (+6 more)
